kube/services/selenium/selenium-node-chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: selenium-node-chrome
  name: selenium-node-chrome
  namespace: default
spec:
  replicas: 20
  selector:
    matchLabels:
      app: selenium-node-chrome
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: selenium-node-chrome
      annotations:
        "cluster-autoscaler.kubernetes.io/safe-to-evict": "false"
    spec:
      containers:
      - env:
        - name: SE_EVENT_BUS_HOST
          value: selenium-hub
        - name: SE_EVENT_BUS_PUBLISH_PORT
          value: "4442"
        - name: SE_EVENT_BUS_SUBSCRIBE_PORT
          value: "4443"
        - name: SE_NODE_MAX_CONCURRENT_SESSIONS
          value: "3"
        image: quay.io/cdis/selenium-node-chrome:4.0.0
        imagePullPolicy: Always
        name: node-chrome
      terminationGracePeriodSeconds: 30
