kube/services/selenium/selenium-hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: selenium-hub
  name: selenium-hub
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32026
    port: 4444
    protocol: TCP
    targetPort: 4444
  selector:
    app: selenium-hub
  sessionAffinity: None
  type: NodePort
