kube/services/selenium/selenium-hub-nodes-policy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: selenium-hub-nodes-policy
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
    - port: 4444
      protocol: TCP
    - port: 4442
      protocol: TCP
    - port: 4443
      protocol: TCP
  podSelector:
    matchLabels:
      app: selenium-hub
  policyTypes:
  - Ingress
  - Egress
