kube/services/selenium/selenium-nodes-hub-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  name: selenium-nodes-hub-policy
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 4444
      protocol: TCP
    - port: 4442
      protocol: TCP
    - port: 4443
      protocol: TCP
    - port: 5555
      protocol: TCP
  podSelector:
    matchLabels:
      app: selenium-node-chrome
  policyTypes:
  - Ingress
  - Egress
